<resources>
    <string name="app_name">Sportologia</string>
    <string name="action_try_again">Повторить</string>
    <string name="network_connection_error">Невозможно подключиться к серверу</string>
    <string name="network_internal_error">Внутрення ошибка. Пожалуйста, повторите позже</string>
    <string name="not_specified">Не указан</string>
    <string name="error">Ошибка</string>
    <string name="error_loading_title">Ошибка подключения</string>
    <string name="error_loading_message">Проверьте соединение с интернетом</string>
    <string name="error_default_load_error_body">Ошибка подключения: проверьте соединение с интернетом</string>
    <string name="error_loading">Ошибка при загрузке</string>
    <string name="error_acquiring">Ошибка при приобретении</string>
    <string name="error_date">Указана неверная дата</string>
    <string name="error_invalid_email_or_password">Указан неправильный email или пароль</string>
    <string name="error_account_with_this_email_exists">Аккаунт с указанным email уже существует</string>
    <string name="error_account_with_this_nickname_exists">Аккаунт с указанным никнеймом уже существует</string>
    <string name="error_set_favorite">Не удалось добавить в избранное</string>
    <string name="error_empty_email">Не указан email</string>
    <string name="error_empty_password">Не указан пароль</string>
    <string name="error_short_password">Длина пароля должна быть не менее 6 символов</string>
    <string name="action_complete">Завершить</string>
    <string name="action_next">Далее</string>
    <string name="action_back">Назад</string>
    <string name="action_ok">Ок</string>
    <string name="action_delete">Удалить</string>
    <string name="action_edit">Редактировать</string>
    <string name="action_report">Пожаловаться</string>
    <string name="action_cancel">Отмена</string>
    <string name="action_create">Создать</string>
    <string name="action_subscribe">Подписаться</string>
    <string name="action_unsubscribe">Отписаться</string>
    <string name="action_unsubscribe_2">В подписках</string>
    <string name="action_open">Открыть</string>
    <string name="action_close">Закрыть</string>
    <string name="action_acquire">Приобрести</string>
    <string name="action_reset">Сбросить</string>
    <string name="action_clear">Очистить</string>
    <string name="action_all">Все</string>
    <string name="action_cancel_verb">Отменить</string>
    <string name="action_apply">Применить</string>
    <string name="action_send">Отправить</string>
    <string name="action_save">Сохранить</string>
    <string name="action_logout">Выйти из аккаунта</string>
    <string name="action_discard_changes">Отменить изменения</string>
    <string name="mon_short">пн</string>
    <string name="tue_short">вт</string>
    <string name="wen_short">ср</string>
    <string name="thu_short">чт</string>
    <string name="fri_short">пт</string>
    <string name="sat_short">сб</string>
    <string name="sun_short">вс</string>
    <string name="categories_not_specified">Не указаны</string>
    <string name="category_running">Бег</string>
    <string name="category_master_classes">Мастер-класс</string>
    <string name="category_martial_arts">Боевые искусства</string>
    <string name="category_body_building">Бодибилдинг</string>
    <string name="category_aerobics">Аэробика</string>
    <string name="tp_categories_not_specified">Не указаны</string>
    <string name="tp_category_gaining_muscles_mass">Набор мыш. массы</string>
    <string name="tp_category_losing_weight">Похудение</string>
    <string name="tp_category_keeping_form">Поддержание формы</string>
    <string name="tp_category_else">Другое</string>
    <string name="date_today">Сегодня</string>
    <string name="date_yesterday">Вчера</string>
    <string name="date_at">в</string>
    <string name="test_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="tab_home">Главная</string>
    <string name="tab_services">Услуги</string>
    <string name="tab_search">Поиск</string>
    <string name="tab_profile">Профиль</string>
    <string name="email">Эл. почта</string>
    <string name="password">Пароль</string>
    <string name="forgot_password">Забыли пароль?</string>
    <string name="sign_in">Войти</string>
    <string name="sign_up">Зарегистрироваться</string>
    <string name="back">Назад</string>
    <string name="hint_email">Введите адрес эл. почты</string>
    <string name="hint_password">Введите пароль</string>
    <string name="registration">Регистрация</string>
    <string name="account_type">Тип учётной записи</string>
    <string name="athlete">Спортсмен</string>
    <string name="organization">Организация</string>
    <string name="athlete_firstname">Имя пользователя</string>
    <string name="athlete_name">Фамилия пользователя</string>
    <string name="athlete_lastname">Фамилия пользователя</string>
    <string name="athlete_nickname">Никнейм пользователя</string>
    <string name="organization_name">Название организации</string>
    <string name="organization_nickname">Никнейм организации</string>
    <string name="gender">Пол</string>
    <string name="age">Дата рождения</string>
    <string name="male">Мужской</string>
    <string name="female">Женский</string>
    <string name="description">Описание</string>
    <string name="athlete_categories">Интересы</string>
    <string name="organization_categories">Специализации</string>
    <string name="address">Адрес</string>
    <string name="profile_settings">Настройки профиля</string>
    <string name="hint_account_type">Укажите тип учётной записи</string>
    <string name="hint_athlete_firstname">Укажите имя пользователя</string>
    <string name="hint_athlete_lastname">Укажите фамилию пользователя</string>
    <string name="hint_athlete_nickname">Укажите никнейм пользователя</string>
    <string name="hint_organization_name">Укажите название организации</string>
    <string name="hint_organization_nickname">Укажите никнейм организации</string>
    <string name="hint_description">Укажите описание</string>
    <string name="hint_gender">Укажите пол</string>
    <string name="hint_age">Укажите дату рождения</string>
    <string name="hint_athlete_interests">Укажите свои интересы</string>
    <string name="hint_organization_specializations">Укажите свои специализации</string>
    <string name="hint_address">Укажите свой адрес (Опционально)</string>
    <string name="followers">Подписчики</string>
    <string name="followings">Подписки</string>
    <string name="interests">Интересы</string>
    <string name="specializations">Специализации</string>
    <string name="photos">Фото</string>
    <string name="posts">Публикации</string>
    <string name="services">Услуги</string>
    <string name="events">Мероприятия</string>
    <string name="edit_verb">Редактировать</string>
    <string name="fav">Избранное</string>
    <string name="create_post">Создать запись</string>
    <string name="create_service">Создать услугу</string>
    <string name="create_event">Создать мероприятие</string>
    <string name="home">Главная</string>
    <string name="posts_all">Все</string>
    <string name="posts_upcoming">Предстоящие</string>
    <string name="events_all">Все</string>
    <string name="events_organization">Организации</string>
    <string name="events_users">Пользователи</string>
    <string name="usernameDefault">Иван Иванов</string>
    <string name="event_organizer">Организатор</string>
    <string name="event_date">Дата</string>
    <string name="event_address">Адрес</string>
    <string name="event_price">Стоимость</string>
    <string name="event_categories">Категории</string>
    <string name="event_description">Описание</string>
    <string name="service">Услуга</string>
    <string name="my_services">Мои услуги</string>
    <string name="acquired_services">Приобретённые услуги</string>
    <string name="service_training_program">Тренировочная программа</string>
    <string name="service_training_program_short">Трен. программа</string>
    <string name="service_price">Стоимость</string>
    <string name="service_categories">Категории</string>
    <string name="service_description">Описание</string>
    <string name="service_acquired_number">Приобритений</string>
    <string name="service_reviews_number">Отзывов</string>
    <string name="service_rating">Рейтинг</string>
    <string name="service_acquired_successfully">Успешное приобретение</string>
    <string name="service_general_info">Общая информация</string>
    <string name="service_detailed_info">Подробная информация</string>
    <string name="no_exercises">Нет упражнений</string>
    <string name="free">Бесплатно</string>
    <string name="rubles">Рублей</string>
    <string name="ruble_abbreviation">Руб.</string>
    <string name="dollar_abbreviation">$</string>
    <string name="search_all">Все</string>
    <string name="search_users">Пользователи</string>
    <string name="search_athletes">Спортсмены</string>
    <string name="search_organizations">Организации</string>
    <string name="search_events">Мероприятия</string>
    <string name="search_services">Услуги</string>
    <string name="restrictions">Ограничения</string>
    <string name="sorting">Сортировка</string>
    <string name="my_review">Мой отзыв</string>
    <string name="write_review">Написать отзыв</string>
    <string name="rating">Рейтинг</string>
    <string name="grade">Оценка</string>
    <string name="title">Заголовок</string>
    <string name="text">Текст</string>
    <string name="optional">(Опционально)</string>
    <string name="out_of_5">Из 5</string>
    <string name="posts_empty">Нет публикаций</string>
    <string name="users_empty">Нет пользователей</string>
    <string name="athletes_empty">Нет спортсменов</string>
    <string name="service_new">Новая услуга</string>
    <string name="exercise_new">Новое упражнение</string>
    <string name="event_new">Новое мероприятие</string>
    <string name="event_name">Название мероприятия</string>
    <string name="event_name_hint">Укажите название мероприятия</string>
    <string name="event_date_hint">Укажите дату проведения мероприятия</string>
    <string name="event_date_hint_from">С</string>
    <string name="event_date_hint_to_optionally">До (Опционально)</string>
    <string name="event_address_hint">Укажите адрес мероприятия</string>
    <string name="event_price_hint">Укажите стоимость мероприятия (Руб)</string>
    <string name="event_categories_hint">Укажите категорию мероприятия</string>
    <string name="event_description_hint">Введите описание мероприятия</string>
    <string name="service_type">Вид услуги</string>
    <string name="program_price">Стоимость</string>
    <string name="program_aim">Цель</string>
    <string name="program_name_hint">Укажите название программы</string>
    <string name="program_price_hint">Укажите стоимость программы (Руб)</string>
    <string name="program_description_hint">Введите описание программы</string>
    <string name="exercise_name">Название упражнения</string>
    <string name="exercise_sets_number">Число подходов</string>
    <string name="exercise_reps_number">Число повторений</string>
    <string name="exercise_regularity">Регулярность</string>
    <string name="exercise_name_hint">Укажите название упражнения</string>
    <string name="exercise_sets_number_hint">Укажите число подходов</string>
    <string name="exercise_reps_number_hint">Укажите число повторений</string>
    <string name="exercise_regularity_hint">Укажите регулярность</string>
</resources>